2007-05-28  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream.cpp: It is not safe to assume the maximum
	  path length of a unix socket is 108. On OSX it is 104. On some
	  systems it is defined, on others we have to assume 104.

2007-04-12  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Clean up the way debian/rules permissions are set so
	  they cause less breakage.

2007-04-12  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Add a more detailed test so the inlined version
	  of gai_strerror provided by more recent versions of mingw can
	  be used.

2006-12-17  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream.cpp, skstream/skstream.h, skstream/skstream_unix.h:
	  Add some inline documentation comments for Doxygen. Switch some
	  iostream related types to use the typedefs made available by
	  the iostream library.

2006-12-14  Al Riddoch  <alriddoch@zepler.org>

	* Makefile.am: Remove pc.in files from EXTRA_DIST, as autotools
	  distribute them anyway. Include Doxyfile in the distribution.

	* Doxyfile: Remove missing footer directive.

2006-12-09  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Ensure debian/rules is executable.

	* debian/control.in: Fix the name of the debug package.

	* debian/libskstream-0.3-dev.install: Fix the header order.

	* libskstream-0.3-4-dbg.install, libskstream-0.3-4.install:
	  Rename install files to the correct interface version.

2006-12-09  Al Riddoch  <alriddoch@zepler.org>

	* debian: Experimental package files for creating .debs.

2006-10-14  Al Riddoch  <alriddoch@zepler.org>

	* skstream/skstream.h, skstream/sksocket.h: Move the IP
	  protocol enumerations to the generic socket header, as
	  they can be used in either streams or servers. Remove
	  service port numbers, as we should not be hardcoding
	  them. We should be looking them up from the OS.

	* ping/ping.cpp: Add our own variable for the ping service
	  as the headers no longer provide it.
